# petalia-geospacial-engine

./: .env.example  .env.production.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  update.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_rename_ndwi_to_ndmi.py  003_add_ndre_savi_evi2.py  004_geom_column_geometry_type.py  005_add_cascade_delete.py
docker/: Dockerfile  Dockerfile.worker  prometheus.yml
docker/nginx/: nginx.conf
docs/: architecture.md
scripts/: ec2_bootstrap.sh  seed_data.py
src/: main.py
src/application/commands/: __init__.py  create_analysis_command.py
src/application/dto/: __init__.py  analysis_dto.py
src/application/ports/: __init__.py  cache_port.py
src/application/queries/: __init__.py  get_analysis_query.py  get_field_alerts_query.py  get_field_latest_query.py  get_field_timeseries_query.py
src/application/use_cases/: __init__.py  create_analysis_use_case.py  get_analysis_use_case.py  get_field_alerts_use_case.py  get_field_latest_use_case.py  get_field_timeseries_use_case.py
src/domain/entities/: __init__.py  agronomic_alert.py  analysis.py  field.py  satellite_observation.py  vegetation_metrics.py
src/domain/repositories/: __init__.py  alert_repository.py  analysis_repository.py  field_repository.py  metrics_repository.py  observation_repository.py
src/domain/services/: __init__.py  alert_detection_service.py  analysis_domain_service.py
src/domain/value_objects/: __init__.py  alert_severity.py  alert_type.py  analysis_status.py  geometry.py  requested_metrics.py  vegetation_health.py  vegetation_trend.py
src/infrastructure/cache/: __init__.py  cache_service.py  redis_client.py
src/infrastructure/database/: connection.py  models.py
src/infrastructure/earth_engine/: __init__.py  client.py  image_fetcher.py  index_calculator.py
src/infrastructure/messaging/: __init__.py  celery_app.py  event_publisher.py
src/infrastructure/monitoring/: __init__.py  logging.py  metrics.py  tracing.py
src/infrastructure/workers/: analysis_worker.py  batch_analysis_worker.py  gee_export_worker.py
src/presentation/api/: analyses.py  dependencies.py  fields.py  health.py  router.py
src/presentation/middlewares/: __init__.py  auth_middleware.py  logging_middleware.py
src/presentation/schemas/: __init__.py  analysis_schemas.py  field_schemas.py
src/shared/config/: settings.py
src/shared/exceptions/: __init__.py  domain_exceptions.py
src/shared/utils/: __init__.py  datetime_utils.py  geo_utils.py
tests/: conftest.py
tests/api/: conftest.py  test_analyses_endpoints.py  test_fields_endpoints.py
tests/integration/: conftest.py  test_database.py
tests/unit/application/: test_create_analysis_use_case.py  test_queries.py
tests/unit/domain/: test_alert_detection_service.py  test_analysis_entity.py  test_field_entity.py  test_index_calculator.py  (+3 more)
tests/workers/: test_analysis_worker.py  test_batch_analysis_worker.py  test_gee_export_worker.py
(+7 files in other folders)
