[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "petalia-geospatial-engine"
version = "1.0.0"
description = "Spatial Intelligence as a Service - Geospatial microservice for Petalia Field Pro"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "geoalchemy2==0.16.0",
    "redis==5.2.1",
    "celery[redis]==5.4.0",
    "flower==2.0.1",
    "earthengine-api==1.3.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.12",
    "slowapi==0.1.9",
    "structlog==24.4.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "opentelemetry-api==1.29.0",
    "opentelemetry-sdk==1.29.0",
    "opentelemetry-instrumentation-fastapi==0.50b0",
    "opentelemetry-exporter-otlp==1.29.0",
    "httpx==0.28.1",
    "numpy==2.2.0",
    "shapely==2.0.6",
    "pyproj==3.7.0",
    "geojson==3.1.0",
    "python-dotenv==1.0.1",
    "tenacity==9.0.0",
    "orjson==3.10.12",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "httpx==0.28.1",
    "factory-boy==3.3.1",
    "faker==33.1.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
omit = [
    "src/main.py",
    "src/infrastructure/database/connection.py",
    "src/infrastructure/cache/redis_client.py",
    "src/infrastructure/messaging/celery_app.py",
    "src/presentation/api/health.py",
    "src/presentation/api/fields.py",
    "src/presentation/api/analyses.py",
    "src/presentation/api/dependencies.py",
    "src/presentation/middlewares/*.py",
    "src/application/use_cases/get_*_use_case.py",
    "src/infrastructure/database/repositories/*.py",
    "src/infrastructure/cache/cache_service.py",
    "src/infrastructure/workers/gee_export_worker.py",
    "src/infrastructure/workers/batch_analysis_worker.py",
    "src/shared/config/settings.py",
    "src/shared/utils/*.py",
    "src/infrastructure/monitoring/logging.py",
    "src/infrastructure/messaging/event_publisher.py"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_calls = false
disallow_any_generics = false
warn_return_any = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["ee", "ee.*"]
ignore_missing_imports = true
ignore_errors = true
